[package]
name = "horse_race"
version = "0.1.0"
authors = ["hgminerva <hgminerva@gmail.com>"]
edition = "2021"

[dependencies]
ink = { version = "5.1.1", default-features = false }
sp-runtime = { version = "40.0.0", default-features = false }

[dev-dependencies]
ink_e2e = { version = "5.1.1" }

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "sp-runtime/std",
]
ink-as-dependency = []
e2e-tests = []
